<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/love"
        android:orderInCategory="101"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="102"
        android:title="@string/action_clear"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="103"
        android:title="@string/action_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="105"
        app:showAsAction="never" />

</menu>
